fixed layout issues with meet the team page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,10 @@ nav {
     font-size: 60%;
 }
 
+.navbar .navbar-toggler {
+    border: 0;
+}
+
 .btn-secondary {
     color: #ffffff;
     background-color: #6d2433;
@@ -206,4 +210,18 @@ div h2 {
     // Extra large devices (large desktops, 1200px and up)
     @media (min-width: 1200px) {
         ...
+    }
+
+
+
+    /* Meet the team page */
+
+    .card-columns {
+        @include media-breakpoint-only(lg) {
+            column-count: 4;
+        }
+
+        @include media-breakpoint-only(xl) {
+            column-count: 5;
+        }
     }
